Add dynamic data

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,9 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg{
+    background-image: url('https://img.freepik.com/free-vector/indian-rupee-coins-falling_23-2147987395.jpg?w=740&t=st=1673265382~exp=1673265982~hmac=9b14e7463bd6ba9d1445d0cbe29721f96e9bf73c7d0aff13e570384233cfa885  ');
+    background-size: 100%;
+    /* background-color: aqua; */
+    height: auto;
+    position: absolute;
+    width: 100%;
+    
 }
